--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - echo yes | sdkmanager "platforms;android-26" &>/dev/null
 
 script:
-  - ./gradlew clean testDebug lintDebug -Dscan --stacktrace
+  - ./gradlew clean build --stacktrace
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
